<resources>
    <string name="app_name">Foodi</string>

    <string name="api_key">AIzaSyAIBMbRT-B-_KE6l-a8F6jhqZycCYBH0jo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registr_success">Registration success</string>
    <string name="registr_failed">Registration failed</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>

    //MainMenuActivity
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_my_delivery_requests">My Delivery Requests</string>
    <string name="nav_check_delivery_offers">Check Delivery Offers</string>
    <string name="nav_browse_delivery_requests">Browse Delivery Requests</string>
    <string name="nav_email_sign_out">Sign out</string>

    <string name="nav_customer_manage_orders">Manage Orders</string>

    <string name="action_settings">Settings</string>

    <string name="customer_order_fragment">Customer Order</string>
    <string name="list_orders_fragment">Orders</string>
    <string name="delivery_request_fragment">Delivery Request</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="create_request">Create Request</string>
    <string name="order_number">Order Number</string>
    <string name="restaurant">Restaruant</string>
    <string name="date_time">Date Time</string>

    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="customer_name">Customer Name</string>
    <string name="offer_price">Offer Price</string>
    <string name="update_price">Update Price</string>
    <string name="delivery_request_created">Delivery Request Created</string>
    <string name="acceptOffer">Accept %1$s\'s Offer?</string>
    <string name="acceptedOffer">Accepted %1$s\'s Offer.</string>

    <string name="select_address">Select Address</string>

    <string name="cancel">Cancel</string>

    <string name="enter_offer">Enter your offer:</string>
    <string name="select_time">select time</string>

    <string name="confirm">Confirm</string>
    <string name="stored_date_format">"yyyy-MM-dd hh:mm aa"</string>
    <string name="display_short_date_format">"MMM dd"</string>
    <string name="display_time_format">"hh:mm aa"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_offer">Confirm to deliver food from %1$s to %2$s ?\n Reward: $%3$s</string>
    <string name="confirmed_offer">Confirmed offer</string>
    <string name="request_date">Request Date</string>
    <string name="request_status">Request Status</string>


    <string name="request_status_changed">Request status changed</string>

    <string name="update_to_delivered">
        Update the status to \"Delivered\"?\n
        Request Date: %1$s\n
        Request Time: %2$s\n
        Restaurant: %3$s\n
        Driver: %4$s\n
        Reward: $%5$s\n
    </string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="restaurant_address_line">Restaurant Address Line</string>
    <string name="delivery_address_line">Delivery Address Line</string>
    <string name="title_activity_delivery_offer_maps">DeliveryPathMap</string>

</resources>
