<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Customer">
        <menu>
            <item
                android:id="@+id/nav_my_delivery_requests"
                android:title="@string/nav_my_delivery_requests" />
            <item
                android:id="@+id/nav_check_delivery_offers"
                android:title="@string/nav_check_delivery_offers" />
        </menu>
    </item>

    <item android:title="Driver">
        <menu>
            <item
                android:id="@+id/nav_browse_delivery_offers"
                android:title="@string/nav_browse_delivery_request" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_email_sign_out"
        android:title="@string/nav_email_sign_out" />
</menu>
