<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_address" />
    <TextView
        android:id="@+id/restaurant_address_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address" />
    <TextView
        android:id="@+id/delivery_address_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/content_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_offer" />
    <EditText
        android:id="@+id/offer_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/offer_price"/>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="Estimated Delivery Time"/>
        <Button
            android:id="@+id/est_del_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:onClick="showTimePickerDialog" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/duration_tv"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="Estimating time..." />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/refresh_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Refresh"/>
        <Button
            android:id="@+id/show_map_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Show Map"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/set_offer_price_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
