<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/order_number"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/order_number"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/restaurant_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/restaurant_name"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/offer_price"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/offer_price"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>
