<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foodi.view.ManageDeliveryRequestsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_column="1"
                android:text="@string/order_number"
                android:padding="3dip" />
            <TextView
                android:layout_column="1"
                android:text="@string/restaurant"
                android:gravity="right"
                android:padding="3dip" />
            <TextView
                android:layout_column="1"
                android:text="@string/date_time"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddFAB"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|right"
        android:clickable="true"
        android:src="@drawable/ic_add" />
</FrameLayout>
