<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foodi.view.MyDeliveryRequestsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:id="@+id/header_tablelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:text="@string/request_date"
                    android:padding="3dip" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:text="@string/restaurant"
                    android:gravity="left"
                    android:padding="3dip" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:text="@string/request_status"
                    android:gravity="left"
                    android:padding="3dip" />
            </TableRow>
        </TableLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/request_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddFAB"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|right"
        android:clickable="true"
        android:src="@drawable/ic_add" />
</FrameLayout>
